Test: user can log in and create a new user, fix flash not showing up

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -87,6 +87,7 @@ p {
 li {
   font-family: "Gotham Medium";
   font-size: 1.5em;
+  color: black; 
 }
 
 nav ul a {
